--- a/indeex.html
+++ b/indeex.html
@@ -149,9 +149,9 @@
 <!-------- Footer Start --------->
         <footer>
             <div class="footer-div">
-                <a href="">Facebook</a>
-                <a href="">Youtube</a>
-                <a href="">What's App</a><br>
+                <a href="https://www.facebook.com/" target="_blank">Facebook</a>
+                <a href="https://www.youtube.com/" target="_blank">Youtube</a>
+                <a href="https://www.instagram.com/" target="_blank">Instagram</a><br>
                 <p>Copyright&copy; Syful Islam Abir 2023</p>
             </div>
         </footer>
